feat: build and install gdal and proj from source